Correctly align dropdowns on mobile

--- a/src/scss/boards.scss
+++ b/src/scss/boards.scss
@@ -21,7 +21,7 @@
 
 .input-align {
   @media only screen and (min-resolution: 192dpi) {
-    float: right;
+    width: 100%;
     align-self: center;
   }
 }
